--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   photo_view: null
   pinput: null
   popover: null
-  razorpay_flutter: null
+  razorpay_flutter: ^1.3.7
   responsive_sizer: null
   rxdart: null
   searchfield: ^1.2.2
